@@ -18,3 +18,4 @@ test-xml-040.cs
 test-xml-041.cs
 test-xml-042.cs
 test-xml-043.cs
+test-xml-044.cs
